--- a/Trabalho/src/main/resources/application.properties
+++ b/Trabalho/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=Aeroporto
 spring.data.mongodb.uri = mongodb://localhost:27017/aeroporto
+
+# JWT Configuration
+jwt.secret=jeM1BKcUnaudnoGBF4TYvOvu26DMAUjovfu1Zfr/vB0=
+jwt.expiration=120000
+server.address=0.0.0.0
+server.port=8080
