--- a/Trabalho Front/aeroporto/pubspec.yaml
+++ b/Trabalho Front/aeroporto/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   http: ^1.1.0
   google_fonts: ^6.1.0
   uuid: ^4.2.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
